<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com</groupId>
  <artifactId>FR_Test_Automation</artifactId>
  <version>3.0.0</version>
  
  <name>FR Test Automation</name>
  <url>http://maven.apache.org</url>
  
  <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
  	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>3.5.3</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/junit/junit -->

	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.12</version>
		<scope>test</scope>
	</dependency>
	<!-- for logging -->
	<dependency>
		<groupId>org.apache.logging.log4j</groupId>
		<artifactId>log4j-api</artifactId>
		<version>2.5</version>
	</dependency>
	<dependency>
		<groupId>org.apache.logging.log4j</groupId>
		<artifactId>log4j-core</artifactId>
		<version>2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
	<dependency>
		<groupId>org.hamcrest</groupId>
		<artifactId>hamcrest-all</artifactId>
		<version>1.3</version>
		<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
	<dependency>
		<groupId>commons-configuration</groupId>
		<artifactId>commons-configuration</artifactId>
		<version>1.6</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java8 -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-java8</artifactId>
		<version>1.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-picocontainer</artifactId>
		<version>1.2.5</version>
		<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-junit</artifactId>
		<version>1.2.5</version>
		<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/info.cukes/gherkin -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>gherkin</artifactId>
		<version>2.12.2</version>
		<scope>provided</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-java</artifactId>
		<version>1.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
	<dependency>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.22.0</version>
		<type>maven-plugin</type>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<dependency>
	    <groupId>com.aventstack</groupId>
	    <artifactId>extentreports</artifactId>
	    <version>3.1.5</version>
	</dependency>
	<dependency>
	    <groupId>com.vimalselvam</groupId>
	    <artifactId>cucumber-extentsreport</artifactId>
	    <version>3.1.0</version>
	</dependency>
	<dependency>
	    <groupId>com.github.temyers</groupId>
	    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
	    <version>5.0.0</version>
	</dependency>

	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>
	<dependency>
	    <groupId>com.rajatthareja</groupId>
	    <artifactId>reportbuilder</artifactId>
	    <version>1.0.2</version>
	</dependency>
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20180130</version>
	</dependency> 
  </dependencies>
  
  	<build>
		<plugins>
			<plugin>
				<groupId>com.github.temyers</groupId>
				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
				<version>5.0.0</version>
				<executions>
					<execution>
						<id>generateRunners</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>generateRunners</goal>
						</goals>
						<configuration>
							<glue>
								<package>com.stepdefs</package>
							</glue>
							<plugins>
								<plugin>
									<name>com.cucumber.listener.ExtentCucumberFormatter</name>
									<extension>html</extension>
								</plugin>
							</plugins>
							<namingPattern>{f}_Parallel{c}IT</namingPattern>
							<customVmTemplate>
								src/test/resources/cucumber-extents-report-runner.java.vm
							</customVmTemplate>
							<outputDirectory>target/generated-test-sources/features</outputDirectory>
							<featuresDirectory>src/test/resources/features</featuresDirectory>
							<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
							<format>json,html</format>
							<filterFeaturesByTags>true</filterFeaturesByTags>
							<tags>
								<tag>@test</tag>
							</tags>
							<namingScheme>simple</namingScheme>
							<mainClass>cucumber.jvm.parallel.ReportBuilderJava</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<forkCount>7</forkCount>
					<reuseForks>false</reuseForks>
					<includes>
						<include>**/*IT.java</include>
					</includes>
					<runOrder>alphabetical</runOrder>
					<argLine>-Duser.language=en</argLine>
					<argLine>-Xmx512m</argLine>
					<argLine>-XX:MaxPermSize=256m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<systemPropertyVariables>
						<!--<cucumber.options>&#45;&#45;tags @example</cucumber.options> -->
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Make this jar executable -->
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-jar-plugin</artifactId>
			    <configuration>
			        <archive>
			            <manifest>
			                <addClasspath>true</addClasspath>
			                <classpathPrefix>lib/</classpathPrefix>
			                <mainClass>cucumber.jvm.parallel.ReportBuilderJava</mainClass>
			            </manifest>
			        </archive>
			    </configuration>
			</plugin>
		</plugins>
	</build>
</project>